# svo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-deps-debug.sh  config.yaml
configs/: config.yaml
include/: SPSCQueue.h  async_image_loader.h  bucket.h  config_reader.h  core.h  drawer.h  key_frame.h  keyframe.h  map.h  map_point.h  solve_ba.h  tracking.h  utils.h
src/: bucket.cpp  core.cpp  drawer.cpp  key_frame.cpp  keyframe.cpp  main.cpp  map.cpp  solve_ba.cpp  tracking.cpp  utils.cpp
